<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.fges.fixmycity.common.ui.activitiesAndIntents.degradations.ReportDegradationActivity"
    tools:showIn="@layout/activity_report_degradation">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/report_degradation_photo_imv"
                    android:src="@android:drawable/ic_menu_help"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/report_degradation_photo_description" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/report_degradation_take_photo_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/report_degradation_take_photo_btn" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/report_degradation_choose_type"
                android:id="@+id/report_degradation_choose_type_label_txv" />

            <Spinner
                android:id="@+id/report_degradation_sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog">

            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/report_degradation_description"
                android:id="@+id/report_degradation_description_label_txv" />

            <EditText
                android:id="@+id/report_degradation_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="2"
                android:inputType="textMultiLine"
                android:maxLines="6" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
