<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.fges.fixmycity.common.ui.activitiesAndIntents.degradation.ReportedDegradationActivity"
    tools:showIn="@layout/activity_reported_degradation"
    android:gravity="top|center">

    <RelativeLayout
        android:id="@+id/reported_degradation_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
        <ImageView
            android:id="@+id/reported_degradation_imv"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            tools:src="@drawable/ic_menu_gallery"
            android:adjustViewBounds="true"
            android:contentDescription="@string/reported_degradation_picture_description" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reported_degradation_category_label"
                    android:textSize="22sp" />
                <TextView
                    android:id="@+id/reported_degradation_cagetory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Déchets"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reported_degradation_reference_label"
                    android:textSize="22sp"/>



                <TextView
                    android:id="@+id/reported_degradation_reference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="REF01FRA" />
            </LinearLayout>


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/reported_degradation_description_label"
            android:id="@+id/reported_degradation_description_label" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:fillViewport="true">

            <TextView
                android:id="@+id/reported_degradation_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Description..."/>
        </ScrollView>


    </LinearLayout>

</LinearLayout>
